Fix dropdown overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,11 +24,13 @@
 
 .keselect__dropdown {
   width: 100%;
+  background: white;
   border: 1px solid #ced4da;
   border-radius: 4px;
   box-sizing: border-box;
   box-shadow: 0px 0px 10px 0px rgba(100, 100, 100, 0.2);
   position: absolute;
+  z-index: 1;
 }
 
 .keselect__dropdown--bottom {
